feat(pphss): Correct notebook slightly

--- a/notebooks/dino_backbone.ipynb
+++ b/notebooks/dino_backbone.ipynb
@@ -128,8 +128,9 @@
    ],
    "source": [
     "metrics_tracker: dict[int, list[float]] = {index:[] for index in range(-1, 7)}\n",
+    "n_epochs = 10\n",
     "\n",
-    "for epoch in range(10):\n",
+    "for epoch in range(n_epochs):\n",
     "    for iteration, (images, masks) in enumerate(dataloader):\n",
     "        embeddings = backbone(images)\n",
     "        logits = head(embeddings)\n",
@@ -160,9 +161,10 @@
     "                intersection_over_union_per_class[object_class].mean().item()\n",
     "            )\n",
     "\n",
-    "        if iteration % 5:\n",
+    "        if iteration % 10 == 0:\n",
     "            print(\n",
-    "                f\"Epoch:{epoch} \\t Iteration: {iteration * 5} / {len(dataset)} \\t \" +\n",
+    "                f\"Iteration: {epoch * len(dataloader) + iteration}\" +\n",
+    "                f\"/ {n_epochs*len(dataloader)}\"\n",
     "                f\"Loss value: {metrics_tracker[-1][-1]:.3f} \\t \",\n",
     "                \"IoU - \",\n",
     "                *[\n",
