feat(pphss): Add evaluation code

--- a/notebooks/dino_backbone.ipynb
+++ b/notebooks/dino_backbone.ipynb
@@ -101,34 +101,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch:0 \t Iteration: 1 / 100 \t Loss value: 1.932 \t  IoU -  bg : 0.039 \t  low_hand : 0.074 \t  torso : 0.610 \t  low_leg : 0.013 \t  head : 0.009 \t  up_leg : 0.015 \t  up_hand : 0.061 \t \n",
-      "Epoch:0 \t Iteration: 2 / 100 \t Loss value: 1.927 \t  IoU -  bg : 0.089 \t  low_hand : 0.056 \t  torso : 0.530 \t  low_leg : 0.008 \t  head : 0.016 \t  up_leg : 0.012 \t  up_hand : 0.029 \t \n",
-      "Epoch:0 \t Iteration: 3 / 100 \t Loss value: 1.907 \t  IoU -  bg : 0.167 \t  low_hand : 0.069 \t  torso : 0.567 \t  low_leg : 0.008 \t  head : 0.022 \t  up_leg : 0.018 \t  up_hand : 0.010 \t \n",
-      "Epoch:0 \t Iteration: 4 / 100 \t Loss value: 1.914 \t  IoU -  bg : 0.239 \t  low_hand : 0.073 \t  torso : 0.420 \t  low_leg : 0.016 \t  head : 0.027 \t  up_leg : 0.012 \t  up_hand : 0.014 \t \n",
-      "Epoch:0 \t Iteration: 6 / 100 \t Loss value: 1.899 \t  IoU -  bg : 0.400 \t  low_hand : 0.166 \t  torso : 0.343 \t  low_leg : 0.014 \t  head : 0.052 \t  up_leg : 0.002 \t  up_hand : 0.017 \t \n",
-      "Epoch:0 \t Iteration: 7 / 100 \t Loss value: 1.878 \t  IoU -  bg : 0.491 \t  low_hand : 0.235 \t  torso : 0.367 \t  low_leg : 0.021 \t  head : 0.051 \t  up_leg : 0.011 \t  up_hand : 0.035 \t \n",
-      "Epoch:0 \t Iteration: 8 / 100 \t Loss value: 1.891 \t  IoU -  bg : 0.417 \t  low_hand : 0.146 \t  torso : 0.237 \t  low_leg : 0.037 \t  head : 0.049 \t  up_leg : 0.022 \t  up_hand : 0.071 \t \n",
-      "Epoch:0 \t Iteration: 9 / 100 \t Loss value: 1.822 \t  IoU -  bg : 0.626 \t  low_hand : 0.374 \t  torso : 0.505 \t  low_leg : 0.071 \t  head : 0.124 \t  up_leg : 0.011 \t  up_hand : 0.201 \t \n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 25\u001b[0m\n\u001b[1;32m     18\u001b[0m intersection_over_union_per_class \u001b[38;5;241m=\u001b[39m source\u001b[38;5;241m.\u001b[39mutils\u001b[38;5;241m.\u001b[39mlog_probabilities_and_mask_iou_per_class(\n\u001b[1;32m     19\u001b[0m     log_probabilities\u001b[38;5;241m=\u001b[39mlog_probabilities,\n\u001b[1;32m     20\u001b[0m     masks\u001b[38;5;241m=\u001b[39mmasks,\n\u001b[1;32m     21\u001b[0m     classes\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mlist\u001b[39m(dataset\u001b[38;5;241m.\u001b[39mclass_to_name\u001b[38;5;241m.\u001b[39mkeys()),\n\u001b[1;32m     22\u001b[0m )\n\u001b[1;32m     24\u001b[0m optimizer\u001b[38;5;241m.\u001b[39mzero_grad()\n\u001b[0;32m---> 25\u001b[0m \u001b[43mloss_value\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbackward\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     26\u001b[0m optimizer\u001b[38;5;241m.\u001b[39mstep()\n\u001b[1;32m     28\u001b[0m metrics_tracker[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]\u001b[38;5;241m.\u001b[39mappend(loss_value\u001b[38;5;241m.\u001b[39mdetach()\u001b[38;5;241m.\u001b[39mitem())\n",
-      "File \u001b[0;32m~/pascal-part-hss/.venv/lib/python3.11/site-packages/torch/_tensor.py:581\u001b[0m, in \u001b[0;36mTensor.backward\u001b[0;34m(self, gradient, retain_graph, create_graph, inputs)\u001b[0m\n\u001b[1;32m    571\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m has_torch_function_unary(\u001b[38;5;28mself\u001b[39m):\n\u001b[1;32m    572\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m handle_torch_function(\n\u001b[1;32m    573\u001b[0m         Tensor\u001b[38;5;241m.\u001b[39mbackward,\n\u001b[1;32m    574\u001b[0m         (\u001b[38;5;28mself\u001b[39m,),\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    579\u001b[0m         inputs\u001b[38;5;241m=\u001b[39minputs,\n\u001b[1;32m    580\u001b[0m     )\n\u001b[0;32m--> 581\u001b[0m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mautograd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbackward\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    582\u001b[0m \u001b[43m    \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mgradient\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mretain_graph\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcreate_graph\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minputs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43minputs\u001b[49m\n\u001b[1;32m    583\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/pascal-part-hss/.venv/lib/python3.11/site-packages/torch/autograd/__init__.py:347\u001b[0m, in \u001b[0;36mbackward\u001b[0;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables, inputs)\u001b[0m\n\u001b[1;32m    342\u001b[0m     retain_graph \u001b[38;5;241m=\u001b[39m create_graph\n\u001b[1;32m    344\u001b[0m \u001b[38;5;66;03m# The reason we repeat the same comment below is that\u001b[39;00m\n\u001b[1;32m    345\u001b[0m \u001b[38;5;66;03m# some Python versions print out the first line of a multi-line function\u001b[39;00m\n\u001b[1;32m    346\u001b[0m \u001b[38;5;66;03m# calls in the traceback and some print out the last line\u001b[39;00m\n\u001b[0;32m--> 347\u001b[0m \u001b[43m_engine_run_backward\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m    348\u001b[0m \u001b[43m    \u001b[49m\u001b[43mtensors\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    349\u001b[0m \u001b[43m    \u001b[49m\u001b[43mgrad_tensors_\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    350\u001b[0m \u001b[43m    \u001b[49m\u001b[43mretain_graph\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    351\u001b[0m \u001b[43m    \u001b[49m\u001b[43mcreate_graph\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    352\u001b[0m \u001b[43m    \u001b[49m\u001b[43minputs\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m    353\u001b[0m \u001b[43m    \u001b[49m\u001b[43mallow_unreachable\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[1;32m    354\u001b[0m \u001b[43m    \u001b[49m\u001b[43maccumulate_grad\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[1;32m    355\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/pascal-part-hss/.venv/lib/python3.11/site-packages/torch/autograd/graph.py:825\u001b[0m, in \u001b[0;36m_engine_run_backward\u001b[0;34m(t_outputs, *args, **kwargs)\u001b[0m\n\u001b[1;32m    823\u001b[0m     unregister_hooks \u001b[38;5;241m=\u001b[39m _register_logging_hooks_on_whole_graph(t_outputs)\n\u001b[1;32m    824\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m--> 825\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mVariable\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_execution_engine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun_backward\u001b[49m\u001b[43m(\u001b[49m\u001b[43m  \u001b[49m\u001b[38;5;66;43;03m# Calls into the C++ engine to run the backward pass\u001b[39;49;00m\n\u001b[1;32m    826\u001b[0m \u001b[43m        \u001b[49m\u001b[43mt_outputs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\n\u001b[1;32m    827\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m  \u001b[38;5;66;03m# Calls into the C++ engine to run the backward pass\u001b[39;00m\n\u001b[1;32m    828\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[1;32m    829\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m attach_logging_hooks:\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "Iteration: 0/ 10Loss value: 1.945 \t  IoU -  bg : 0.015 \t  low_hand : 0.073 \t  torso : 0.538 \t  low_leg : 0.017 \t  head : 0.012 \t  up_leg : 0.028 \t  up_hand : 0.105 \t \n",
+      "Iteration: 5/ 10Loss value: 1.896 \t  IoU -  bg : 0.360 \t  low_hand : 0.106 \t  torso : 0.390 \t  low_leg : 0.018 \t  head : 0.034 \t  up_leg : 0.014 \t  up_hand : 0.013 \t \n"
      ]
     }
    ],
    "source": [
     "metrics_tracker: dict[int, list[float]] = {index:[] for index in range(-1, 7)}\n",
-    "n_epochs = 10\n",
+    "n_epochs = 1\n",
     "\n",
     "for epoch in range(n_epochs):\n",
     "    for iteration, (images, masks) in enumerate(dataloader):\n",
@@ -161,7 +141,7 @@
     "                intersection_over_union_per_class[object_class].mean().item()\n",
     "            )\n",
     "\n",
-    "        if iteration % 10 == 0:\n",
+    "        if iteration % 5 == 0:\n",
     "            print(\n",
     "                f\"Iteration: {epoch * len(dataloader) + iteration}\" +\n",
     "                f\"/ {n_epochs*len(dataloader)}\"\n",
@@ -209,6 +189,80 @@
     "plt.title(\"train IoU\")\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# metrics on eval"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "evaluation_dataset = source.data.PascalPartSmallDataset(\n",
+    "    transform=image_transform,\n",
+    "    train=False,\n",
+    ")\n",
+    "_ = backbone.eval(), head.eval()\n",
+    "evaluation_metrics_tracker = {index:[] for index in range(0, 7)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "IoU -  bg : 0.670 \t  low_hand : 0.674 \t  torso : 0.591 \t  low_leg : 0.235 \t  head : 0.212 \t  up_leg : 0.016 \t  up_hand : 0.298 \t \n"
+     ]
+    }
+   ],
+   "source": [
+    "with torch.no_grad():\n",
+    "    for image, mask in evaluation_dataset:\n",
+    "        mask_shape = mask.shape\n",
+    "        image = image.unsqueeze(0)\n",
+    "        mask = mask.unsqueeze(0)\n",
+    "\n",
+    "        embedding = backbone(image)\n",
+    "        logits = head(embedding)\n",
+    "\n",
+    "        log_probabilities = torch.nn.functional.log_softmax(\n",
+    "            logits,\n",
+    "            dim=1, # 1 x C x H x W\n",
+    "        )\n",
+    "        upsampled_log_probabilities = torch.nn.functional.interpolate(\n",
+    "            input=log_probabilities,\n",
+    "            size=mask_shape,\n",
+    "        )\n",
+    "\n",
+    "        intersection_over_union_per_class = source.utils.log_probabilities_and_mask_iou_per_class(\n",
+    "            log_probabilities=upsampled_log_probabilities,\n",
+    "            masks=mask,\n",
+    "            classes=list(dataset.class_to_name.keys()),\n",
+    "        )\n",
+    "        \n",
+    "        for object_class in list(dataset.class_to_name.keys()):\n",
+    "            evaluation_metrics_tracker[object_class].append(\n",
+    "                intersection_over_union_per_class[object_class].mean().item()\n",
+    "            )\n",
+    "\n",
+    "print(\n",
+    "    \"IoU - \",\n",
+    "    *[\n",
+    "        f\"{dataset.class_to_name[object_class]} : \" +\n",
+    "        f\"{sum(evaluation_metrics_tracker[object_class]) / len(evaluation_metrics_tracker[object_class]):.3f} \\t \"\n",
+    "        for object_class in list(dataset.class_to_name.keys())\n",
+    "    ]\n",
+    ")"
    ]
   }
  ],
