feat(pphss): Add transition to cuda

--- a/notebooks/dino_backbone.ipynb
+++ b/notebooks/dino_backbone.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,9 @@
     "import torch.utils.data\n",
     "import torch\n",
     "import torch.optim\n",
-    "_  = torch.manual_seed(0)"
+    "_  = torch.manual_seed(0)\n",
+    "cpu_device = torch.device('cpu')\n",
+    "device = torch.device('cpu')"
    ]
   },
   {
@@ -94,6 +96,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_ = (\n",
+    "    backbone.to(device),\n",
+    "    loss_function.to(device),\n",
+    "    head.to(device)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
@@ -112,6 +127,10 @@
     "\n",
     "for epoch in range(n_epochs):\n",
     "    for iteration, (images, masks) in enumerate(dataloader):\n",
+    "\n",
+    "        images.to(device)\n",
+    "        masks.to(device)\n",
+    "\n",
     "        embeddings = backbone(images)\n",
     "        logits = head(embeddings)\n",
     "\n",
@@ -135,10 +154,10 @@
     "        loss_value.backward()\n",
     "        optimizer.step()\n",
     "\n",
-    "        metrics_tracker[-1].append(loss_value.detach().item())\n",
+    "        metrics_tracker[-1].append(loss_value.to(cpu_device).detach().item())\n",
     "        for object_class in list(dataset.class_to_name.keys()):\n",
     "            metrics_tracker[object_class].append(\n",
-    "                intersection_over_union_per_class[object_class].mean().item()\n",
+    "                intersection_over_union_per_class[object_class].mean().to(cpu_device).detach().item()\n",
     "            )\n",
     "\n",
     "        if iteration % 5 == 0:\n",
@@ -228,6 +247,9 @@
    "source": [
     "with torch.no_grad():\n",
     "    for image, mask in evaluation_dataset:\n",
+    "        image.to(device)\n",
+    "        mask.to(device)\n",
+    "        \n",
     "        mask_shape = mask.shape\n",
     "        image = image.unsqueeze(0)\n",
     "        mask = mask.unsqueeze(0)\n",
@@ -252,7 +274,7 @@
     "        \n",
     "        for object_class in list(dataset.class_to_name.keys()):\n",
     "            evaluation_metrics_tracker[object_class].append(\n",
-    "                intersection_over_union_per_class[object_class].mean().item()\n",
+    "                intersection_over_union_per_class[object_class].mean().to(cpu_device).item()\n",
     "            )\n",
     "\n",
     "print(\n",
@@ -288,6 +310,7 @@
     "image = image_transform(original_image).unsqueeze(0)\n",
     "mask = mask.unsqueeze(0)\n",
     "\n",
+    "image.to(device)\n",
     "embedding = backbone(image)\n",
     "logits = head(embedding)\n",
     "\n",
@@ -299,10 +322,9 @@
     "    input=log_probabilities,\n",
     "    size=mask_shape,\n",
     ")\n",
-    "\n",
     "predicted_mask = upsampled_log_probabilities.argmax(\n",
     "    dim=1\n",
-    ").squeeze()\n",
+    ").squeeze().to(cpu_device)\n",
     "\n",
     "figure = plt.figure(figsize=(10, 4))\n",
     "\n",
